[gd_scene load_steps=9 format=3 uid="uid://b4q7v1n1u370q"]

[ext_resource type="Script" uid="uid://6dhulyc34mgl" path="res://locations/template/slot.gd" id="1_8jju3"]
[ext_resource type="Theme" uid="uid://djg8cvd887cqj" path="res://assets/theme/actor_theme.tres" id="1_mabo7"]
[ext_resource type="Texture2D" uid="uid://5t4ole0i0o0s" path="res://assets/img/ui/pointer.png" id="2_8jju3"]

[sub_resource type="Curve" id="Curve_rjc2u"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.49908257), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_rjc2u"]
colors = PackedColorArray(0.87058824, 0.61960787, 0.25490198, 1, 0.90588236, 0.8352941, 0.7019608, 0)

[sub_resource type="Animation" id="Animation_y36n6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pointer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -18)]
}

[sub_resource type="Animation" id="Animation_u5opy"]
resource_name = "loop"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pointer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -18), Vector2(0, -22)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y36n6"]
_data = {
&"RESET": SubResource("Animation_y36n6"),
&"loop": SubResource("Animation_u5opy")
}

[node name="Slot" type="Marker2D"]
texture_filter = 1
scale = Vector2(6, 6)
script = ExtResource("1_8jju3")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = 16.0
focus_mode = 0
theme = ExtResource("1_mabo7")

[node name="ActorContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Pointer" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -18)
texture = ExtResource("2_8jju3")

[node name="BtnParticles" type="CPUParticles2D" parent="Pointer"]
position = Vector2(0, 17)
amount = 6
emission_shape = 3
emission_rect_extents = Vector2(7, 16)
gravity = Vector2(0, -10)
scale_amount_min = 6.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_rjc2u")
color_ramp = SubResource("Gradient_rjc2u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pointer"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_y36n6")
}
autoplay = "loop"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
